--- a/index.html
+++ b/index.html
@@ -46,6 +46,33 @@
                         </p>
                     </section>
                 </div>
+                <section class="experience gap">
+                    <div class="right-title">Experiencia</div>
+                    <div class="experience-contents">
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 01</p>
+                            <p class="exp-time-period">2022-Present</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Desenvolvedor de Analie de Sistemas</p>
+                            <p class="exp-desc">
+                                Descreva aqui principais atividades 
+                            </p>
+                        </div>
+
+                    
+                        <div class="exp-left">
+                            <p class="exp-company-name">Empresa 02</p>
+                            <p class="exp-time-period">2022-Present</p>
+                        </div>
+                        <div class="exp-right">
+                            <p class="exp-position">Desenvolvedor de Analie de Sistemas</p>
+                            <p class="exp-desc">
+                                Descreva aqui principais atividades 02
+                            </p>
+                        </div>
+                    </div>
+                </section>
             </section>   
     </main>
 </body>
