--- a/index.html
+++ b/index.html
@@ -73,6 +73,31 @@
                         </div>
                     </div>
                 </section>
+                <section class="education gap ">
+                    <div class="right-title">Formação academica</div>
+                    <div class="education-contents">
+                        <div class="education-left">
+                            <p class="education-school-name">PUC</p>
+                            <p class="education-time-period">2021/2023</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">ADS</p>
+                            <p class="education-desc">
+                                Pós  Graduação em Engenharia de Software
+                            </p>
+                        </div>
+                        <div class="education-left">
+                            <p class="education-school-name">USP</p>
+                            <p class="education-time-period">2015/2018</p>
+                        </div>
+                        <div class="education-right">
+                            <p class="education-subject">ADS</p>
+                            <p class="education-desc">
+                                  Graduação em Engenharia da computação
+                            </p>
+                        </div>
+                    </div>
+                </section>
             </section>   
     </main>
 </body>
