--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <div class="contact-info">
                     <p class="left-title">Contato</p>
                     <ul>
-                        <li><i class="fa fa-phone"></i>+55 (35) 998824773</li>
-                        <li><i class="fa fa-envelope"></i>jefferson.tos2001@hotmail.com</li>
+                        <li><i class="fa fa-phone"></i>+55 (35) 99999-7777</li>
+                        <li><i class="fa fa-envelope"></i>jefferson.devv@hotmail.com</li>
                         <li><i class="fa fa-globe"></i>www.jeffersonSouza.com</li>
                         <li><i class="fa fa-github"></i>Jeffinho011</li>
                     </ul>
@@ -41,8 +41,8 @@
                         <div class="right-title">Sobre Mim</div>
                         <p class="about-mecontents">
                             Olá eu sou o Jefferson.<br>
-                            <br> Um pouco mais sobre o que faço 
-                            <br> Quais são minhas competencias
+                            <br> Sou estudante de tecnologia, quero ser um Desenvolvedor 
+                            <br> Sou muito esforçado, desempenhado a aprender e gosto de desafios.
                         </p>
                     </section>
                 </div>
@@ -97,6 +97,31 @@
                             </p>
                         </div>
                     </div>
+                </section>
+                <section class="awards gap">
+                    <div class="right-title">Cursos</div>
+                    <div class="awards-contents">
+                        <div class="awards-left">
+                            <p class="awards-company-name">EBAC</p>
+                            <p class="awards-time-period">junho 2018</p>
+                        </div>
+                        <div class="awards-rigth">
+                            <p class="awards-name">Curso de UX</p>
+                            <p class="awards-desc">
+                                Curso feito na EBAC no ano de 2018
+                            </p>
+                        </div>
+                            <div class="awards-left">
+                                <p class="awards-company-name">EBAC</p>
+                                <p class="awards-time-period">junho 2019</p>
+                            </div>
+                            <div class="awards-rigth">
+                                <p class="awards-name">Curso de Analise de Dados</p>
+                                <p class="awards-desc">
+                                    Curso feito na EBAC no ano de 2019
+                                </p>
+                          </div>
+                    </div> 
                 </section>
             </section>   
     </main>
