feature: add index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
                             <br> Sou muito esforçado, desempenhado a aprender e gosto de desafios.
                         </p>
                     </section>
-                </div>
                 <section class="experience gap">
                     <div class="right-title">Experiencia</div>
                     <div class="experience-contents">
@@ -123,7 +122,9 @@
                           </div>
                     </div> 
                 </section>
+            </div>    
             </section>   
     </main>
 </body>
-</html>
+
+</html
